create message and show it on screen

--- a/humming-web/src/app/editor/editor.component.html
+++ b/humming-web/src/app/editor/editor.component.html
@@ -1,6 +1,11 @@
-<p>editor works!</p>
-<label>Enter message</label>
-<input class="form-control" type="text" [(ngModel)]="message" />
-<button class="btn btn-primary" (click)="createMessage()">
-    Create message
-</button>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <label>Enter message</label>
+            <input class="form-control" type="text" [(ngModel)]="message" />
+            <button class="btn btn-primary" (click)="createMessage()">
+                Create message
+            </button>
+        </div>
+    </div>
+</div>
