--- a/humming-web/src/app/app.component.html
+++ b/humming-web/src/app/app.component.html
@@ -1,18 +1,29 @@
+<nav class="navbar navbar-light bg-light">
+    <a href="#" class="navbar-brand">Humming</a>
+</nav>
+
 <div class="container">
-    <div class="row navbar top">
-        <div class="col"></div>
-        <div class="col-6"></div>
-        <div class="col">
-            <h2>Humming</h2>
-        </div>
-    </div>
-    <div class="row">
+    <div class="row mt-2">
         <div class="col"></div>
         <div class="col-6"></div>
         <div class="col">
             <app-editor
                 (messageCreated)="onMessageCreated($event)"
             ></app-editor>
+        </div>
+    </div>
+    <div class="row mt-2 my-row">
+        <div class="col"></div>
+        <div class="col-6"></div>
+        <div class="col">
+            <ul class="list-group">
+                <li *ngFor="let message of messages" class="list-group-item">
+                    {{ message.messageContent }}
+                    <span class="badge badge-primary badge-pill">{{
+                        message.author
+                    }}</span>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
