--- a/humming-web/src/app/app.component.html
+++ b/humming-web/src/app/app.component.html
@@ -4,17 +4,13 @@
 
 <div class="container">
     <div class="row mt-2">
-        <div class="col"></div>
-        <div class="col-6"></div>
-        <div class="col">
-            <app-editor
-                (messageCreated)="onMessageCreated($event)"
-            ></app-editor>
-        </div>
+        <div class="col-4"></div>
+        <div class="col-8"></div>
+        <app-editor (messageCreated)="onMessageCreated($event)"></app-editor>
     </div>
     <div class="row mt-2 my-row">
-        <div class="col"></div>
-        <div class="col-6"></div>
+        <div class="col-4"></div>
+        <div class="col-8"></div>
         <div class="col">
             <ul class="list-group">
                 <li *ngFor="let message of messages" class="list-group-item">
