--- a/humming-web/src/app/editor/editor.component.html
+++ b/humming-web/src/app/editor/editor.component.html
@@ -1,11 +1,5 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <label>Enter message</label>
-            <input class="form-control" type="text" [(ngModel)]="message" />
-            <button class="btn btn-primary" (click)="createMessage()">
-                Create message
-            </button>
-        </div>
-    </div>
-</div>
+<label>Enter message</label>
+<input class="" type="text" [(ngModel)]="message" />
+<button class="btn btn-primary" (click)="createMessage()">
+    Create message
+</button>
