--- a/humming-web/src/app/app.component.html
+++ b/humming-web/src/app/app.component.html
@@ -1,25 +1,58 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark bg-dark">
     <a href="#" class="navbar-brand">Humming</a>
 </nav>
 
-<div class="container">
-    <div class="row mt-2">
-        <div class="col-4"></div>
-        <div class="col-8"></div>
-        <app-editor (messageCreated)="onMessageCreated($event)"></app-editor>
+<!-- <div class="container">
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-12">
+            <app-editor
+                (messageCreated)="onMessageCreated($event)"
+            ></app-editor>
+        </div>
+        <div class="col"></div>
     </div>
-    <div class="row mt-2 my-row">
-        <div class="col-4"></div>
-        <div class="col-8"></div>
-        <div class="col">
-            <ul class="list-group">
-                <li *ngFor="let message of messages" class="list-group-item">
-                    {{ message.messageContent }}
-                    <span class="badge badge-primary badge-pill">{{
-                        message.author
-                    }}</span>
-                </li>
-            </ul>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-12">
+        </div>
+        <div class="col"></div>
+    </div>
+</div> -->
+
+<div class="contrainer">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <div class="form-group">
+                <!-- <input type="text" name="" id="" class="form-control" /> -->
+                <app-editor></app-editor>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="form-group">
+            <div class="col-8">Messages:</div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-2"></div>
+
+        <div class="col-8">
+            <div class="form-group">
+                <ul class="list-group">
+                    <li
+                        *ngFor="let message of messages"
+                        class="list-group-item"
+                    >
+                        <span class="badge badge-primary badge-pill">{{
+                            message.author
+                        }}</span>
+                        {{ message.messageContent }}
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
