--- a/humming-web/src/app/app.component.html
+++ b/humming-web/src/app/app.component.html
@@ -2,7 +2,7 @@
     <a href="#" class="navbar-brand">Humming</a>
 </nav>
 
-<app-hummings *ngIf="userName != ''"></app-hummings>
+<app-hummings *ngIf="userName != ''" [author]="userName"></app-hummings>
 <app-login
     *ngIf="userName === ''"
     (userLoggedIn)="onUserLoggedIn($event)"
